fix visibility on mobile

--- a/public/styles.css
+++ b/public/styles.css
@@ -24,10 +24,11 @@ body {
     display: block;
     caret-color: white;
     caret-shape: block;
-    background-color: black;
+    background-color: rgb(46, 46, 46, 0.3);
     color: white;
     border: 0;
     box-shadow: 0 0 2em .5em rgba(255, 255, 255, 0.3);
+    border-radius: 1em;
     transition: .3s box-shadow;
 
 
